added icon to category

--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -17,7 +17,10 @@
           - @categories.each do |category|
             tr
               td = category.id
-              td = category.name
+              - if category.icon.attached?
+                td.text-center = image_tag category.icon.variant(resize: "32x32!"), class: 'rounded-circle'
+              - else
+                td.text-center No image
               td = category.name
               td = category.description
               td = category.created_at.strftime('%d-%m-%Y %H:%M:%S')
