--- a/app/views/admin/categories/edit.html.slim
+++ b/app/views/admin/categories/edit.html.slim
@@ -3,3 +3,6 @@
   .admin-content
     = render 'admin/shared/admin_content_header'
     .admin-content-body
+      h1 Создать пользователя
+      = render 'form'
+      = link_to 'Назад', :back, class: 'link__grey link__grey_blue'
