--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import "shared/notice";
 @import "shared/header";
 @import "shared/navigation";
+@import "categories/categories";
 
 //admin
 @import "admin/shared/shared";
