--- a/app/assets/stylesheets/categories/categories.sass
+++ b/app/assets/stylesheets/categories/categories.sass
@@ -4,20 +4,34 @@
 .category
   &-wrapper
     @include flexbox()
+    @include flex-wrap(wrap)
     padding: 15px 0
   &-item
     @include flexbox()
     @include flex-direction(column)
     @include justify-content(center)
     @include align-items(center)
-    width: 120px
-    height: 120px
+    width: 140px
+    height: 140px
     margin: 15px
     background: $white
-    //border: 1px solid $line_grey
-    img
-      width: 48px
-      height: 48px
-      border: 1px solid $line_grey
-      //border-radius: 50%
-      //padding: 10px
+    transition: .3s all ease
+    &:hover
+      box-shadow: 0 0 10px 5px rgba(50, 50, 50, 0.2)
+      transition: .3s all ease
+      transform: translateY(-7px)
+    &__image
+      padding: calc(15px / 2)
+      img
+        width: 48px
+        height: 48px
+    &__name
+      padding: calc(15px / 2)
+      text-align: center
+      a
+        color: $font_grey
+        transition: .3s all ease
+        text-decoration: none
+        &:hover
+          color: $orange
+          transition: .3s all ease
