--- a/app/views/categories/_category_item.html.slim
+++ b/app/views/categories/_category_item.html.slim
@@ -1,7 +1,7 @@
 .category-item
   .category-item__image
     - if item.icon.attached?
-      = image_tag item.icon.variant(resize: "48x48!")
+      = link_to "#{image_tag item.icon.variant(resize: '48x48!')}".html_safe, category_path(item)
     - else
-      = image_tag 'folder.svg'
-  .category-item__name = item.name
+      = link_to "#{image_tag 'folder.svg'}".html_safe, category_path(item)
+  .category-item__name = link_to item.name, category_path(item)
