--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -2,3 +2,10 @@
   header
     .container
       = render 'shared/navigation'
+  .page-home
+    .container
+      .search
+        .search-form
+          = render partial: 'search_form'
+      .category-wrapper
+        = render partial: 'categories/category_item', collection: @categories, as: :item
