--- a/app/views/shared/_navigation.html.slim
+++ b/app/views/shared/_navigation.html.slim
@@ -16,7 +16,9 @@
           = link_to "#{current_user.first_name} #{current_user.last_name}", root_path
         - else
           span = current_user.email
-        = link_to '', destroy_user_session_path, :method => :delete, class: 'fas fa-sign-out-alt 2x', title: "ВЫЙТИ"
+        = link_to '', destroy_user_session_path, :method => :delete, class: 'fas fa-sign-out-alt', title: "ВЫЙТИ"
+        - if current_user.admin?
+          = link_to '', admin_dashboard_index_path, class: 'fas fa-tools', title: "Панель администратора"
       - else
         = link_to 'ВОЙТИ', new_user_session_path
         = link_to 'ЗАРЕГИСТРИРОВАТЬСЯ', new_user_registration_path
