--- a/app/assets/stylesheets/admin/shared/shared.sass
+++ b/app/assets/stylesheets/admin/shared/shared.sass
@@ -80,5 +80,7 @@
           &:hover
             color: $orange
             transition: .3s
+        a
+          color: $font_grey
     &-body
       padding: 15px
