--- a/app/views/admin/shared/_admin_content_header.html.slim
+++ b/app/views/admin/shared/_admin_content_header.html.slim
@@ -4,3 +4,4 @@
   .admin-content-header-item
     = fa_icon('bell')
     = fa_icon('comments')
+    = link_to fa_icon('sign-out-alt'), destroy_user_session_path, :method => :delete, title: "ВЫЙТИ"
