--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -9,3 +9,10 @@
           = render partial: 'search_form'
       .category-wrapper
         = render partial: 'categories/category_item', collection: @categories, as: :item
+    section.vip-ads
+      .container
+        .vip-ads__title
+          | VIP-объявления
+          .vip-ads__title-subtitle Продавай и покупай все что угодно!
+        .vip-ads__content
+          |123
