--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "shared/header";
 @import "shared/navigation";
 @import "home/search";
+@import "home/home";
 @import "categories/categories";
 
 //admin
