--- a/app/assets/stylesheets/shared/variables.sass
+++ b/app/assets/stylesheets/shared/variables.sass
@@ -7,6 +7,9 @@ $green: rgb(26, 180, 18)
 $black: rgb(0,0,0)
 $red: rgb(236, 18, 18)
 $blue: rgb(66,139,202)
+$blue_dark: rgb(24,94,200)
+$purple: rgb(103,56,182)
+$yellow: rgb(255,215,0)
 
 //admin colors
 $admin_background: rgb(244,246,249)
