--- a/app/assets/stylesheets/admin/shared/shared.sass
+++ b/app/assets/stylesheets/admin/shared/shared.sass
@@ -6,7 +6,7 @@
   @include flexbox()
   &-navigation
     width: 260px
-    height: 100vh
+    min-height: 100vh
     background: $admin_navigation_background
     &-header
       height: 56px
@@ -56,7 +56,7 @@
           transition: .3s
   &-content
     width: calc(100% - 260px)
-    height: 100vh
+    min-height: 100vh
     &-header
       height: 56px
       border-bottom: 1px solid $light-grey
