--- a/app/views/admin/ads/_form.html.slim
+++ b/app/views/admin/ads/_form.html.slim
@@ -4,5 +4,6 @@
     = f.input :name, label: 'Название'
     = f.input :text, label: 'Текст'
     = f.input :price, label: 'Цена'
+    = f.drag_and_drop_file_field :images, nil, size_limit: 5_000_000
     = f.input :user_id, collection: User.all.map { |user| [user.email, user.id, {data: {email: user.email}}] }, include_blank: false
     = f.button :submit
