--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -9,6 +9,7 @@
           thead
             tr
               th ID
+              th Статус
               th Иконка
               th Название
               th Описание
@@ -18,6 +19,13 @@
             - @categories.each do |category|
               tr
                 td = category.id
+                td
+                  - if category.state == 1
+                    span.state.state-draft = category.state
+                  - if category.state == 2
+                    span.state.state-published = category.state
+                  - if category.state == 3
+                    span.state.state-archival = category.state
                 - if category.icon.attached?
                   td.text-center = image_tag category.icon.variant(resize: "32x32!"), class: 'rounded-circle'
                 - else
