config state mashine

--- a/app/assets/stylesheets/shared/shared.sass
+++ b/app/assets/stylesheets/shared/shared.sass
@@ -61,6 +61,30 @@ body
           transform: scale(1.5)
           transition: 0.3s
           outline: none
+      .color-yellow
+        transition: 0.3s
+        outline: none
+        color: $yellow
+        &:hover
+          transform: scale(1.5)
+          transition: 0.3s
+          outline: none
+      .color-purple
+        transition: 0.3s
+        outline: none
+        color: $purple
+        &:hover
+          transform: scale(1.5)
+          transition: 0.3s
+          outline: none
+      .color-orange
+        transition: 0.3s
+        outline: none
+        color: $orange
+        &:hover
+          transform: scale(1.5)
+          transition: 0.3s
+          outline: none
       .status-active
         color: $green
   .text-center
