--- a/app/views/admin/ads/index.html.slim
+++ b/app/views/admin/ads/index.html.slim
@@ -3,7 +3,7 @@
   .admin-content
     = render 'admin/shared/admin_content_header'
     .admin-content-body
-      h1 Список пользователей
+      h1 Список объявлений
       .container-table
         table.table-admin
           thead
