--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -3,4 +3,4 @@
   .admin-content
     = render 'admin/shared/admin_content_header'
     .admin-content-body
-      h1 Страница Dashboard
+      h1 Панель управления
