--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -51,9 +51,8 @@
                   td
                     .state.state-published Активный
                 td
-                  = link_to '', admin_user_path(user), class: 'icon fas fa-eye color-green'
-                  = link_to '', edit_admin_user_path(user), class: 'icon fas fa-edit color-blue'
-                  = link_to '', admin_user_path(user), data: { confirm: 'Are you sure?' }, method: :delete, remote: true, class: 'icon fas fa-trash color-red'
+                  = link_to '', admin_user_path(user), class: 'fas fa-eye table__icon table__icon_green'
+                  = link_to '', edit_admin_user_path(user), class: 'fas fa-edit table__icon table__icon_blue'
+                  = link_to '', admin_user_path(user), data: { confirm: 'Are you sure?' }, method: :delete, remote: true, class: 'fas fa-trash table__icon table__icon_red'
       br
-
       = link_to "#{fa_icon('user-plus', text: 'Добавить пользователя')}".html_safe, new_admin_user_path, class: 'link__grey link__grey_green'
