--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -35,11 +35,11 @@
                 td = category.created_at.strftime('%d-%m-%Y %H:%M:%S')
                 td
                   - if category.state == 1
-                    = link_to '', admin_to_publish_path(category), class: 'icon fas fa-file-import color-green', title: 'Опубликовать'
+                    = link_to '', admin_to_publish_path(category), class: 'fas fa-file-import table__icon table__icon_green', title: 'Опубликовать'
                   - if category.state == 2
-                    = link_to '', admin_to_publish_path(category), class: 'icon fas fa-file-export color-orange', title: 'В черновик'
-                  = link_to '', admin_category_path(category), class: 'icon fas fa-eye color-purple', title: 'Посмотреть'
-                  = link_to '', edit_admin_category_path(category), class: 'icon fas fa-edit color-blue', title: 'Редактировать'
-                  = link_to '', admin_category_path(category), data: { confirm: 'Are you sure?' }, method: :delete, remote: true, class: 'icon fas fa-trash color-red', title: 'Удалить'
+                    = link_to '', admin_to_draft_path(category), class: 'fas fa-file-export table__icon table__icon_orange', title: 'В черновик'
+                  = link_to '', admin_category_path(category), class: 'fas fa-eye table__icon table__icon_purple', title: 'Посмотреть'
+                  = link_to '', edit_admin_category_path(category), class: 'fas fa-edit table__icon table__icon_blue', title: 'Редактировать'
+                  = link_to '', admin_category_path(category), data: { confirm: 'Are you sure?' }, method: :delete, remote: true, class: 'fas fa-trash table__icon table__icon_red', title: 'Удалить'
       br
       = link_to "#{fa_icon('user-plus', text: 'Добавить категорию')}".html_safe, new_admin_category_path, class: 'link__grey link__grey_green'
