--- a/app/views/admin/categories/new.html.slim
+++ b/app/views/admin/categories/new.html.slim
@@ -3,6 +3,7 @@
   .admin-content
     = render 'admin/shared/admin_content_header'
     .admin-content-body
-      h1 Создать пользователя
+      h1 Создать категорию
       = render 'form'
+      br
       = link_to 'Назад', :back, class: 'link__grey link__grey_blue'
