added ads, remove drag and drop

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,9 +6,11 @@
 @import "shared/notice";
 @import "shared/header";
 @import "shared/navigation";
+@import "shared/footer";
 @import "home/search";
 @import "home/home";
 @import "categories/categories";
+@import "ads/ads";
 
 //admin
 @import "admin/shared/shared";
