--- a/app/assets/stylesheets/shared/variables.sass
+++ b/app/assets/stylesheets/shared/variables.sass
@@ -10,6 +10,7 @@ $blue: rgb(66,139,202)
 $blue_dark: rgb(24,94,200)
 $purple: rgb(103,56,182)
 $yellow: rgb(255,215,0)
+$purple_dark: rgb(32,25,50)
 
 //admin colors
 $admin_background: rgb(244,246,249)
