--- a/app/assets/stylesheets/categories/categories.sass
+++ b/app/assets/stylesheets/categories/categories.sass
@@ -5,13 +5,15 @@
   &-wrapper
     @include flexbox()
     @include flex-wrap(wrap)
+    @include justify-content(flex-start)
     padding: 15px 0
   &-item
     @include flexbox()
     @include flex-direction(column)
     @include justify-content(center)
     @include align-items(center)
-    width: 140px
+    width: calc(990px / 7)
+
     height: 140px
     margin: 15px
     background: $white
