--- a/app/views/admin/ads/index.html.slim
+++ b/app/views/admin/ads/index.html.slim
@@ -12,7 +12,7 @@
               th Статус
               th Название
               th Текст
-              th Изображения
+              th Фото
               th Цена
               th
           tbody
@@ -32,14 +32,21 @@
                     span.state.state-published = ad.state
                   - if ad.state == 6
                     span.state.state-archival = ad.state
-                td = ad.name
-                td = ad.text
+                td.table__td-size_md = ad.name
+                td.table__td-size_lg = ad.text
                 td
-                  - if ad.images.attached?
-                    - ad.images.each do |img|
-                      = image_tag img.variant(resize: "48x48!"), class: 'img-thumbnail'
-                  - else
-                    span no images
+                  - if ad.main_image.attached?
+                    = image_tag ad.main_image.variant(resize: "32x32!"), class: 'img-thumbnail'
+                  - if ad.image_1.attached?
+                    = image_tag ad.image_1.variant(resize: "32x32!"), class: 'img-thumbnail'
+                  - if ad.image_2.attached?
+                    = image_tag ad.image_2.variant(resize: "32x32!"), class: 'img-thumbnail'
+                  - if ad.image_3.attached?
+                    = image_tag ad.image_3.variant(resize: "32x32!"), class: 'img-thumbnail'
+                  - if ad.image_4.attached?
+                    = image_tag ad.image_4.variant(resize: "32x32!"), class: 'img-thumbnail'
+                  - if ad.image_5.attached?
+                    = image_tag ad.image_5.variant(resize: "32x32!"), class: 'img-thumbnail'
                 td = ad.price
                 td
                   = link_to '', admin_ad_path(ad), class: 'fas fa-eye table__icon table__icon_green'
