--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
 @import "home/search";
 @import "home/home";
 @import "categories/categories";
+@import "subcategories/subcategories";
 @import "ads/ads";
 
 //admin
