--- a/app/assets/stylesheets/shared/shared.sass
+++ b/app/assets/stylesheets/shared/shared.sass
@@ -63,7 +63,7 @@ body
     .table__subcategories
       @include flexbox()
       &-list
-        width: 150px
+        min-width: 150px
       &-add
         width: 30px
         @include flexbox()
