--- a/app/views/admin/subcategories/_form.html.slim
+++ b/app/views/admin/subcategories/_form.html.slim
@@ -1,5 +1,5 @@
 .form
-  = simple_form_for [:admin, @category, Subcategory.new], html: {class: 'form-admin'} do |f|
+  = simple_form_for [:admin, @category, @subcategory], html: {class: 'form-admin'} do |f|
     = f.error_notification
     = f.input :name, label: 'Название:'
     = f.input :category_id, as: :hidden, input_html: { value: @category.id }
