--- a/app/views/admin/shared/_admin_navigation.html.slim
+++ b/app/views/admin/shared/_admin_navigation.html.slim
@@ -13,6 +13,6 @@
     .admin-navigation-item
       = link_to "#{fa_icon('folder', text: 'Категории')}".html_safe, admin_categories_path
     .admin-navigation-item
-      = link_to "#{fa_icon('user', text: 'Объявления')}".html_safe, admin_ads_path
+      = link_to "#{fa_icon('adversal', text: 'Объявления', type: :brand)}".html_safe, admin_ads_path
     .admin-navigation-item
       = link_to "#{fa_icon('user', text: 'Пользователи')}".html_safe, admin_users_path
