--- a/app/assets/stylesheets/subcategories/subcategories.sass
+++ b/app/assets/stylesheets/subcategories/subcategories.sass
@@ -9,4 +9,9 @@
     border: 1px solid $light_grey
     padding: 4px
     margin: 4px
-  &-title
+  &-title-state
+    margin: 0 4px
+  &-title-id
+    margin: 0 4px
+    color: $font_grey
+    font-size: .9em
