--- a/app/assets/stylesheets/shared/shared.sass
+++ b/app/assets/stylesheets/shared/shared.sass
@@ -133,6 +133,7 @@ body
     border: 1px solid $light_grey
     padding: 2px
     margin: 2px
+    object-fit: cover
   .state
     background: $orange
     border: 1px solid $light_grey
