--- a/app/assets/stylesheets/shared/shared.sass
+++ b/app/assets/stylesheets/shared/shared.sass
@@ -34,6 +34,8 @@ body
       max-width: 500px
     .table__td-size_sm
       max-width: 150px
+    .table__td-size_220
+      max-width: 220px
     .table__td-size_md
       max-width: 300px
     .table__td-size_lg
