--- a/app/assets/stylesheets/categories/categories.sass
+++ b/app/assets/stylesheets/categories/categories.sass
@@ -8,12 +8,12 @@
     @include justify-content(flex-start)
     padding: 15px 0
   &-item
+    position: relative
     @include flexbox()
     @include flex-direction(column)
     @include justify-content(center)
     @include align-items(center)
     width: calc(990px / 7)
-
     height: 140px
     margin: 15px
     background: $white
