--- a/app/views/ads/_ad_item.html.slim
+++ b/app/views/ads/_ad_item.html.slim
@@ -43,7 +43,10 @@
           span = item.user.created_at.strftime('%d.%m.%Y')
         .ad__item-user-contacts
           .ad__item-user-phone
-            | Кликните, что бы посмотреть номер
-            | +38(066)XXX-XX-XX
+            .ad__item-user-phone-wrap
+              span.ad__item-user-phone-icon = fa_icon('phone 2x')
+              span.ad__item-user-phone-text#phone-block-link Номер телефона
+            .ad__item-user-phone-number#phone-block
+              span#phone-block-link-hidden = item.user.phone if item.user.phone.present?
           .ad__item-user-send-msg
             | Написать автору
